--- a/miniverse/html/index.html
+++ b/miniverse/html/index.html
@@ -172,7 +172,7 @@
 
             <!-- Evento 3 -->
             <div class="col divs_funcoes_site">
-                <a href="">
+                <a href="personalizacao.html">
                     <div class="div_diferencial_site">
                         <img src="..." alt="..." class="evento-img">
                         <div class="overlay"></div>
