--- a/miniverse/html/produtos.html
+++ b/miniverse/html/produtos.html
@@ -39,15 +39,15 @@
                                     Marcas
                                 </a>
                                 <ul class="dropdown-menu dropmenu-marcas">
-                                    <li><a class="dropdown-item a_li_header" href="#marvel">Marvel</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="#dc">DC</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="#dragonball">Dragon
+                                    <li><a class="dropdown-item a_li_header" href="produtos.html#marvel">Marvel</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dc">DC</a></li>
+                                    <li><a class="dropdown-item a_li_header" href="produtos.html#dragonball">Dragon
                                             Ball</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="#tlou">The Last of
+                                    <li><a class="dropdown-item a_li_header" href="produtos.html#tlou">The Last of
                                             Us</a></li>
-                                    <li><a class="dropdown-item a_li_header" href="#starwars">Star Wars</a>
+                                    <li><a class="dropdown-item a_li_header" href="produtos.html#starwars">Star Wars</a>
                                     </li>
-                                    <li><a class="dropdown-item a_li_header" href="#seresmito">Seres
+                                    <li><a class="dropdown-item a_li_header" href="produtos.html#seresmito">Seres
                                             Mitológicos</a></li>
                                 </ul>
                             </li>
@@ -166,39 +166,39 @@
             <hr style="color: rgba(255, 140, 0); border: 0; border-top: 10px solid rgb(255, 140, 0);">
             <div class="row text-center" style="margin-top: 20px;">
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_db border-0 h-100">
                         <img src="../images/produtos_dragonBall/Goku.png" class="card-img-top" alt="Goku"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Goku</h5>
                             <p class="card-text">R$ 549,90</p>
-                            <a href="./dragonBall/goku.html" class="btn button button_">Ver
+                            <a href="./dragonBall/goku.html" class="btn button_db">Ver
                                 miniatura</a>
                         </div>
                     </div>
 
                 </div>
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_db border-0 h-100">
                         <img src="../images/produtos_dragonBall/Vegeta.png" class="card-img-top" alt="Vegeta"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Vegeta</h5>
                             <p class="card-text">R$ 529,90</p>
-                            <a href="./dragonBall/vegeta.html" class="btn button button_">Ver
+                            <a href="./dragonBall/vegeta.html" class="btn button_db">Ver
                                 miniatura</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_db border-0 h-100">
                         <img src="../images/produtos_dragonBall/Piccolo.png" class="card-img-top" alt="Piccolo"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Piccolo</h5>
                             <p class="card-text">R$ 499,90</p>
-                            <a href="./dragonBall/piccolo.html" class="btn button button_">Ver
+                            <a href="./dragonBall/piccolo.html" class="btn button_db">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -214,39 +214,39 @@
             <hr style="color: rgba(128, 64, 0); border: 0; border-top: 10px solid rgb(128, 64, 0);">
             <div class="row text-center" style="margin-top: 20px;">
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_tlou border-0 h-100">
                         <img src="../images/produtos_tlou/Joel.png" class="card-img-top" alt="Joel"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Joel</h5>
                             <p class="card-text">R$ 539,90</p>
-                            <a href="./tlou/joel.html" class="btn button button_">Ver
+                            <a href="./tlou/joel.html" class="btn button_tlou">Ver
                                 miniatura</a>
                         </div>
                     </div>
 
                 </div>
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_tlou border-0 h-100">
                         <img src="../images/produtos_tlou/Ellie.png" class="card-img-top" alt="Ellie"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Ellie</h5>
                             <p class="card-text">R$ 559,90</p>
-                            <a href="./tlou/ellie.html" class="btn button button_">Ver
+                            <a href="./tlou/ellie.html" class="btn button_tlou">Ver
                                 miniatura</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_tlou border-0 h-100">
                         <img src="../images/produtos_tlou/Abby.png" class="card-img-top" alt="Abby"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Abby</h5>
                             <p class="card-text">R$ 499,90</p>
-                            <a href="./tlou/abby.html" class="btn button button_">Ver
+                            <a href="./tlou/abby.html" class="btn button_tlou">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -262,39 +262,39 @@
             <hr style="color: rgba(255, 215, 0); border: 0; border-top: 10px solid rgb(255, 215, 0);">
             <div class="row text-center" style="margin-top: 20px;">
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_star border-0 h-100">
                         <img src="../images/produtos_starWars/DarthVader.png" class="card-img-top" alt="Darth Vader"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Darth Vader</h5>
                             <p class="card-text">R$ 599,90</p>
-                            <a href="./starWars/darthVader.html" class="btn button button_">Ver
+                            <a href="./starWars/darthVader.html" class="btn button_star">Ver
                                 miniatura</a>
                         </div>
                     </div>
 
                 </div>
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_star border-0 h-100">
                         <img src="../images/produtos_starWars/Yoda.png" class="card-img-top" alt="Yoda"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Yoda</h5>
                             <p class="card-text">R$ 519,90</p>
-                            <a href="./starWars/yoda.html" class="btn button button_">Ver
+                            <a href="./starWars/yoda.html" class="btn button_star">Ver
                                 miniatura</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_star border-0 h-100">
                         <img src="../images/produtos_starWars/Leia.png" class="card-img-top" alt="Leia"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Leia</h5>
                             <p class="card-text">R$ 499,90</p>
-                            <a href="./starWars/leia.html" class="btn button button_">Ver
+                            <a href="./starWars/leia.html" class="btn button_star">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -310,39 +310,39 @@
             <hr style="color: rgba(138, 43, 226); border: 0; border-top: 10px solid rgb(138, 43, 226);">
             <div class="row text-center" style="margin-top: 20px;">
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_seres border-0 h-100">
                         <img src="../images/produtos_seresMito/Zeus.png" class="card-img-top" alt="Zeus"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Zeus</h5>
                             <p class="card-text">R$ 569,90</p>
-                            <a href="./seresMito/zeus.html" class="btn button button_">Ver
+                            <a href="./seresMito/zeus.html" class="btn button_seres">Ver
                                 miniatura</a>
                         </div>
                     </div>
 
                 </div>
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_seres border-0 h-100">
                         <img src="../images/produtos_seresMito/Minotauro.png" class="card-img-top" alt="Minotauro"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Minotauro</h5>
                             <p class="card-text">R$ 519,90</p>
-                            <a href="./seresMito/minotauro.html" class="btn button button_">Ver
+                            <a href="./seresMito/minotauro.html" class="btn button_seres">Ver
                                 miniatura</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-12 col-md-4" style="margin-bottom: 20px;">
-                    <div class="card card_lancamento border-0 h-100">
+                    <div class="card card_lancamento card_seres border-0 h-100">
                         <img src="../images/produtos_seresMito/Medusa.png" class="card-img-top" alt="Medusa"
                             style="height: 400px;">
                         <div class="card-body">
                             <h5 class="card-title">Medusa</h5>
                             <p class="card-text">R$ 539,90</p>
-                            <a href="./seresMito/medusa.html" class="btn button button_">Ver
+                            <a href="./seresMito/medusa.html" class="btn button_seres">Ver
                                 miniatura</a>
                         </div>
                     </div>
@@ -351,6 +351,77 @@
         </div>
     </section>
 
+
+    <footer class="bd-footer py-4 py-md-5" style="margin-top: 200px;">
+        <div class="container py-4 py-md-5 px-4 px-md-3">
+            <div class="row">
+                <div class="col-lg-3 mb-3"> <a class="d-inline-flex align-items-center mb-2 text-decoration-none"
+                        href="index.html" aria-label="Bootstrap"> <img src="../images/logo_miniverse_minimalista.png"
+                            height="80" width="80">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z"
+                            fill="currentColor"></path>
+                        </svg> <span class="fs-5 miniF">Miniverse</span>
+                    </a>
+                    <ul class="list-unstyled small">
+                        <li class="mb-2" style="font-size: 20px;">
+                            <i>Seu universo em miniatura.</i>
+                        </li>
+                        <li class="mb-2"></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="marvel">Marvel</h5><br>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="./marvel/homemAranha.html">Homem-Aranha</a></li>
+                        <li class="mb-2"><a href="./marvel/homemFerro.html">Homem de Ferro</a></li>
+                        <li class="mb-2"><a href="./marvel/capitaoAmerica.html">Capitão América</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="dc">DC</h5><br>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="./dc/batman.html">Batman</a></li>
+                        <li class="mb-2"><a href="./dc/superman.html">Superman</a></li>
+                        <li class="mb-2"><a href="./dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="db">Dragon Ball</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"> <a href="./dragonBall/goku.html" rel="noopener">Goku</a> </li>
+                        <li class="mb-2"> <a href="./dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
+                        <li class="mb-2"><a href="./dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="tlou">The Last of Us</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"> <a href="./tlou/joel.html" rel="noopener">Joel</a> </li>
+                        <li class="mb-2"> <a href="./tlou/ellie.html" rel="noopener">Ellie</a> </li>
+                        <li class="mb-2"> <a href="./tlou/abby.html" rel="noopener">Abby</a> </li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="star">Star Wars</h5><br>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"> <a href="./starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
+                        <li class="mb-2"> <a href="./starWars/yoda.html" rel="noopener">Yoda</a> </li>
+                        <li class="mb-2"> <a href="./starWars/leia.html" rel="noopener">Leia</a> </li>
+                    </ul>
+                </div>
+                <div class="col-6 col-lg-1 mb-2">
+                    <h5 class="mito">Seres Mitológicos</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"> <a href="./seresMito/zeus.html" rel="noopener">Zeus</a> </li>
+                        <li class="mb-2"> <a href="./seresMito/minotauro.html" rel="noopener">Minotauro</a> </li>
+                        <li class="mb-2"> <a href="./seresMito/medusa.html" rel="noopener">Medusa</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
