--- a/miniverse/html/marvel/capitaoAmerica.html
+++ b/miniverse/html/marvel/capitaoAmerica.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Miniverse | Home</title>
+  <title>Miniverse | Capitão América</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="../../css/teste.css">
-  <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
+  <link rel="shortcut icon" type="imagex/png" href="/miniverse/images/logo_miniverse_minimalista.png" />
   <!-- Link para o CSS do Select2 -->
   <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
 
@@ -127,37 +127,78 @@
         proteção e bravura.
       </p>
 
-      <h3>Especificações Técnicas</h3>
-      <ul class="especificacoes">
-        <li><strong>Material:</strong> PLA+ premium biodegradável, resistente e livre de toxinas</li>
-        <li><strong>Dimensões:</strong> 15cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
-        <li><strong>Peso:</strong> 210g (base reforçada para estabilidade)</li>
-        <li><strong>Acabamento:</strong> Pintura artesanal com 6 camadas + verniz protetor fosco</li>
-        <li><strong>Base:</strong> Inclusa – circular preta com logo dos Vingadores em alto relevo</li>
-        <li><strong>Resolução de impressão:</strong> 0.1mm (detalhamento ultra preciso)</li>
-        <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
-        <li><strong>Tempo de produção:</strong> 3-5 dias úteis (peça feita sob encomenda)</li>
-        <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
-        <li><strong>Certificação:</strong> Produto artesanal registrado e numerado</li>
-      </ul>
+      <div class="accordion accordion-verde" id="accordionJoel">
+        <!-- Especificações Técnicas -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne">
+              🔧 Especificações Técnicas
+            </button>
+          </h2>
 
-      <h3>Cuidados e Conservação</h3>
-      <ul class="especificacoes">
-        <li><strong>Limpeza:</strong> Use pano macio e seco. Evite produtos abrasivos</li>
-        <li><strong>Exposição:</strong> Mantenha fora da luz solar direta e umidade excessiva</li>
-        <li><strong>Armazenamento:</strong> Local seco, temperatura ambiente (15-25°C)</li>
-        <li><strong>Manuseio:</strong> Segure sempre pela base — o escudo é parte delicada da peça</li>
-      </ul>
+          <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+            <div class="accordion-body">
+              <ul class="especificacoes_verde">
 
-      <h3>Por que escolher Miniverse?</h3>
-      <p class="pq_escolher">
-        ✓ <strong>Qualidade Premium:</strong> Cada miniatura é feita individualmente, sem produção em massa<br>
-        ✓ <strong>Sustentabilidade:</strong> Material PLA biodegradável e processo ecologicamente responsável<br>
-        ✓ <strong>Artesanato Local:</strong> Produção nacional feita por artistas brasileiros<br>
-        ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora<br>
-        ✓ <strong>Certificado de Autenticidade:</strong> Numerado e assinado pelo artista responsável<br>
-        ✓ <strong>Envio Seguro:</strong> Embalagem reforçada e rastreamento completo até a entrega
-      </p>
+                <li><strong>Material:</strong> PLA+ premium biodegradável, resistente e livre de toxinas</li>
+                <li><strong>Dimensões:</strong> 15cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
+                <li><strong>Peso:</strong> 210g (base reforçada para estabilidade)</li>
+                <li><strong>Acabamento:</strong> Pintura artesanal com 6 camadas + verniz protetor fosco</li>
+                <li><strong>Base:</strong> Inclusa – circular preta com logo dos Vingadores em alto relevo</li>
+                <li><strong>Resolução de impressão:</strong> 0.1mm (detalhamento ultra preciso)</li>
+                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
+                <li><strong>Tempo de produção:</strong> 3-5 dias úteis (peça feita sob encomenda)</li>
+                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
+                <li><strong>Certificação:</strong> Produto artesanal registrado e numerado</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Cuidados e Conservação -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#cuidadosCollapse" aria-expanded="false" aria-controls="cuidadosCollapse">
+              🧹 Cuidados e Conservação
+            </button>
+          </h2>
+          <div id="cuidadosCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+            <div class="accordion-body">
+              <ul class="especificacoes_verde">
+                <li><strong>Limpeza:</strong> Use pano macio e seco. Evite produtos abrasivos</li>
+                <li><strong>Exposição:</strong> Mantenha fora da luz solar direta e umidade excessiva</li>
+                <li><strong>Armazenamento:</strong> Local seco, temperatura ambiente (15-25°C)</li>
+                <li><strong>Manuseio:</strong> Segure sempre pela base — o escudo é parte delicada da peça</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Por que escolher Miniverse -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#porqueCollapse" aria-expanded="false" aria-controls="porqueCollapse">
+              ✨ Por que escolher Miniverse?
+            </button>
+          </h2>
+          <div id="porqueCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+            <div class="accordion-body">
+              <p class="pq_escolher_verde">
+                ✓ <strong>Qualidade Premium:</strong> Cada miniatura é feita individualmente, sem produção em massa<br>
+                ✓ <strong>Sustentabilidade:</strong> Material PLA biodegradável e processo ecologicamente
+                responsável<br>
+                ✓ <strong>Artesanato Local:</strong> Produção nacional feita por artistas brasileiros<br>
+                ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora<br>
+                ✓ <strong>Certificado de Autenticidade:</strong> Numerado e assinado pelo artista responsável<br>
+                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada e rastreamento completo até a entrega
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="acompanha">
         <p>
