--- a/miniverse/html/marvel/homemFerro.html
+++ b/miniverse/html/marvel/homemFerro.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Miniverse | Home</title>
+  <title>Miniverse | Homem de Ferro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="../../css/teste.css">
-  <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
+  <link rel="shortcut icon" type="imagex/png" href="/miniverse/images/logo_miniverse_minimalista.png" />
   <!-- Link para o CSS do Select2 -->
   <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
 
@@ -121,37 +121,77 @@
         estabilizadores das mãos. A pose dinâmica captura o herói pronto para o combate, com uma das mãos preparada
         para disparar o repulsor.
       </p>
-      <h3>Especificações Técnicas</h3>
-      <ul class="especificacoes">
-        <li><strong>Material:</strong> PLA+ premium importado (biodegradável e livre de toxinas)</li>
-        <li><strong>Dimensões:</strong> 15cm (altura) x 9cm (largura) x 7cm (profundidade)</li>
-        <li><strong>Peso:</strong> 200g (base robusta garante estabilidade)</li>
-        <li><strong>Acabamento:</strong> Pintura artesanal com 7 camadas + verniz protetor mate</li>
-        <li><strong>Base:</strong> Inclusa - hexagonal preta com logo da Stark Industries em alto relevo</li>
-        <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
-        <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
-        <li><strong>Tempo de produção:</strong> 3-5 dias úteis (cada peça é feita sob encomenda)</li>
-        <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
-        <li><strong>Certificação:</strong> Produto artesanal registrado</li>
-      </ul>
 
-      <h3>Cuidados e Conservação</h3>
-      <ul class="especificacoes">
-        <li><strong>Limpeza:</strong> Use pano macio e seco. Evite produtos químicos</li>
-        <li><strong>Exposição:</strong> Mantenha longe de luz solar direta prolongada</li>
-        <li><strong>Armazenamento:</strong> Local seco, temperatura ambiente (15-25°C)</li>
-        <li><strong>Manuseio:</strong> Segure sempre pela base para evitar quebra de detalhes</li>
-      </ul>
+      <div class="accordion accordion-verde" id="accordionJoel">
+        <!-- Especificações Técnicas -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
+              aria-expanded="true" aria-controls="collapseOne">
+              🔧 Especificações Técnicas
+            </button>
+          </h2>
 
-      <h3>Por que escolher Miniverse?</h3>
-      <p class="pq_escolher">
-        ✓ <strong>Qualidade Premium:</strong> Não trabalhamos com produtos em massa. Cada miniatura é única<br>
-        ✓ <strong>Sustentabilidade:</strong> Material PLA biodegradável e processo de produção consciente<br>
-        ✓ <strong>Artesanato Local:</strong> Apoie artistas brasileiros e produção nacional<br>
-        ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora<br>
-        ✓ <strong>Certificado de Autenticidade:</strong> Cada peça vem numerada e assinada pelo artista<br>
-        ✓ <strong>Envio Seguro:</strong> Embalagem reforçada com rastreamento completo
-      </p>
+          <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+            <div class="accordion-body">
+              <ul class="especificacoes_verde">
+                <li><strong>Material:</strong> PLA+ premium importado (biodegradável e livre de toxinas)</li>
+                <li><strong>Dimensões:</strong> 15cm (altura) x 9cm (largura) x 7cm (profundidade)</li>
+                <li><strong>Peso:</strong> 200g (base robusta garante estabilidade)</li>
+                <li><strong>Acabamento:</strong> Pintura artesanal com 7 camadas + verniz protetor mate</li>
+                <li><strong>Base:</strong> Inclusa - hexagonal preta com logo da Stark Industries em alto relevo</li>
+                <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
+                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
+                <li><strong>Tempo de produção:</strong> 3-5 dias úteis (cada peça é feita sob encomenda)</li>
+                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
+                <li><strong>Certificação:</strong> Produto artesanal registrado</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Cuidados e Conservação -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#cuidadosCollapse" aria-expanded="false" aria-controls="cuidadosCollapse">
+              🧹 Cuidados e Conservação
+            </button>
+          </h2>
+          <div id="cuidadosCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+            <div class="accordion-body">
+              <ul class="especificacoes_verde">
+                <li><strong>Limpeza:</strong> Use pano macio e seco. Evite produtos químicos</li>
+                <li><strong>Exposição:</strong> Mantenha longe de luz solar direta prolongada</li>
+                <li><strong>Armazenamento:</strong> Local seco, temperatura ambiente (15-25°C)</li>
+                <li><strong>Manuseio:</strong> Segure sempre pela base para evitar quebra de detalhes</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Por que escolher Miniverse -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#porqueCollapse" aria-expanded="false" aria-controls="porqueCollapse">
+              ✨ Por que escolher Miniverse?
+            </button>
+          </h2>
+          <div id="porqueCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+            <div class="accordion-body">
+              <p class="pq_escolher_verde">
+                ✓ <strong>Qualidade Premium:</strong> Não trabalhamos com produtos em massa. Cada miniatura é única<br>
+                ✓ <strong>Sustentabilidade:</strong> Material PLA biodegradável e processo de produção consciente<br>
+                ✓ <strong>Artesanato Local:</strong> Apoie artistas brasileiros e produção nacional<br>
+                ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora<br>
+                ✓ <strong>Certificado de Autenticidade:</strong> Cada peça vem numerada e assinada pelo artista<br>
+                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada com rastreamento completo
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="acompanha">
         <p>
