--- a/miniverse/html/produtos_halloween/pennywise.html
+++ b/miniverse/html/produtos_halloween/pennywise.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Miniverse | Home</title>
+    <title>Miniverse | Pennywise</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/teste.css">
-    <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
+    <link rel="shortcut icon" type="imagex/png" href="/miniverse/images/logo_miniverse_minimalista.png" />
     <!-- Link para o CSS do Select2 -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
 
@@ -143,39 +143,88 @@
                 com efeitos de água e sangue que dão um toque cinematográfico arrepiante.
             </p>
 
-            <h3>Especificações Técnicas</h3>
-            <ul class="especificacoes_halloween">
-                <li><strong>Material:</strong> PLA+ premium importado (biodegradável e livre de toxinas)</li>
-                <li><strong>Dimensões:</strong> 18cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
-                <li><strong>Peso:</strong> 210g (base reforçada para estabilidade)</li>
-                <li><strong>Acabamento:</strong> Pintura artesanal com 7 camadas + verniz protetor fosco</li>
-                <li><strong>Base:</strong> Inclusa – cenário de bueiro com balão vermelho e efeito de água</li>
-                <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
-                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
-                <li><strong>Tempo de produção:</strong> 3–5 dias úteis (cada peça é feita sob encomenda)</li>
-                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
-                <li><strong>Certificação:</strong> Produto artesanal registrado</li>
-            </ul>
+            <div class="accordion accordion-halloween" id="accordionHalloween">
+                <!-- Especificações Técnicas -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            🪓 Especificações Técnicas
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionHalloween">
+                        <div class="accordion-body">
+                            <ul class="especificacoes_halloween">
+                                <li><strong>Material:</strong> PLA+ premium importado (biodegradável e livre de toxinas)
+                                </li>
+                                <li><strong>Dimensões:</strong> 18cm (altura) x 8cm (largura) x 7cm (profundidade)</li>
+                                <li><strong>Peso:</strong> 210g (base reforçada para estabilidade)</li>
+                                <li><strong>Acabamento:</strong> Pintura artesanal com 7 camadas + verniz protetor fosco
+                                </li>
+                                <li><strong>Base:</strong> Inclusa – cenário de bueiro com balão vermelho e efeito de
+                                    água</li>
+                                <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
+                                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
+                                <li><strong>Tempo de produção:</strong> 3–5 dias úteis (cada peça é feita sob encomenda)
+                                </li>
+                                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
+                                <li><strong>Certificação:</strong> Produto artesanal registrado</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-            <h3>Cuidados e Conservação</h3>
-            <ul class="especificacoes_halloween">
-                <li><strong>Limpeza:</strong> Utilize pano macio e seco. Evite produtos químicos</li>
-                <li><strong>Exposição:</strong> Não exponha à luz solar direta ou calor excessivo</li>
-                <li><strong>Armazenamento:</strong> Guarde em local seco, arejado e protegido da umidade</li>
-                <li><strong>Manuseio:</strong> Segure sempre pela base — o balão e o colar são partes delicadas</li>
-            </ul>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#cuidadosCollapse" aria-expanded="false" aria-controls="cuidadosCollapse">
+                            🧹 Cuidados e Conservação
+                        </button>
+                    </h2>
+                    <div id="cuidadosCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionHalloween">
+                        <div class="accordion-body">
+                            <ul class="especificacoes_halloween">
+                                <li><strong>Limpeza:</strong> Utilize pano macio e seco. Evite produtos químicos</li>
+                                <li><strong>Exposição:</strong> Não exponha à luz solar direta ou calor excessivo</li>
+                                <li><strong>Armazenamento:</strong> Guarde em local seco, arejado e protegido da umidade
+                                </li>
+                                <li><strong>Manuseio:</strong> Segure sempre pela base — o balão e o colar são partes
+                                    delicadas
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-            <h3>Por que escolher Miniverse?</h3>
-            <p class="pq_escolher_halloween">
-                ✓ <strong>Qualidade Premium:</strong> Modelagem fiel e pintura artesanal detalhada<br>
-                ✓ <strong>Sustentabilidade:</strong> Produção ecológica com PLA biodegradável<br>
-                ✓ <strong>Artesanato Local:</strong> Feito por artistas brasileiros apaixonados por cultura pop e
-                horror<br>
-                ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora e design temático de
-                terror<br>
-                ✓ <strong>Certificado de Autenticidade:</strong> Peça numerada e assinada pelo artista<br>
-                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada com rastreamento completo
-            </p>
+                <!-- Por que escolher Miniverse -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#porqueCollapse" aria-expanded="false" aria-controls="porqueCollapse">
+                            🎃 Por que escolher Miniverse?
+                        </button>
+                    </h2>
+                    <div id="porqueCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionHalloween">
+                        <div class="accordion-body">
+                            <p class="pq_escolher_halloween">
+                                ✓ <strong>Qualidade Premium:</strong> Modelagem fiel e pintura artesanal detalhada<br>
+                                ✓ <strong>Sustentabilidade:</strong> Produção ecológica com PLA biodegradável<br>
+                                ✓ <strong>Artesanato Local:</strong> Feito por artistas brasileiros apaixonados por
+                                cultura pop
+                                e
+                                horror<br>
+                                ✓ <strong>Embalagem Especial:</strong> Caixa colecionável com espuma protetora e design
+                                temático
+                                de
+                                terror<br>
+                                ✓ <strong>Certificado de Autenticidade:</strong> Peça numerada e assinada pelo
+                                artista<br>
+                                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada com rastreamento completo
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="acompanha_halloween">
                 <p>
@@ -228,7 +277,8 @@
                     <h5 class="dc" style="color: orange;">DC</h5><br>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a class="a_footer_halloween" href="./dc/batman.html">Batman</a></li>
-                        <li class="mb-2"><a class="a_footer_halloween" href="./dc/superman.html">Superman</a></li>
+                        <li class="mb-2"><a class="a_footer_halloween" href="./dc/superman.html">Superman</a>
+                        </li>
                         <li class="mb-2"><a class="a_footer_halloween"
                                 href="./dc/mulherMaravilha.html">Mulher-Maravilha</a></li>
                     </ul>
