--- a/miniverse/html/seresMito/medusa.html
+++ b/miniverse/html/seresMito/medusa.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Miniverse | Home</title>
+    <title>Miniverse | Medusa</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/teste.css">
-    <link rel="shortcut icon" type="imagex/png" href="../images/logo_miniverse_minimalista.png" />
+    <link rel="shortcut icon" type="imagex/png" href="/miniverse/images/logo_miniverse_minimalista.png" />
     <!-- Link para o CSS do Select2 -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
 
@@ -136,38 +136,85 @@
                 coleção.
             </p>
 
-            <h3>Especificações Técnicas</h3>
-            <ul class="especificacoes">
-                <li><strong>Material:</strong> PLA+ premium (biodegradável e livre de toxinas)</li>
-                <li><strong>Dimensões:</strong> 16cm (altura) x 10cm (largura) x 8cm (profundidade)</li>
-                <li><strong>Peso:</strong> 220g (com base inclusa)</li>
-                <li><strong>Acabamento:</strong> Pintura artesanal com 6 camadas + verniz protetor acetinado</li>
-                <li><strong>Base:</strong> Inclusa – circular em estilo mármore com inscrição “Medusa” em baixo relevo
-                </li>
-                <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
-                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
-                <li><strong>Tempo de produção:</strong> 3-5 dias úteis (cada peça é feita sob encomenda)</li>
-                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
-                <li><strong>Certificação:</strong> Produto artesanal registrado</li>
-            </ul>
+            <div class="accordion accordion-verde" id="accordionJoel">
+                <!-- Especificações Técnicas -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            🔧 Especificações Técnicas
+                        </button>
+                    </h2>
 
-            <h3>Cuidados e Conservação</h3>
-            <ul class="especificacoes">
-                <li><strong>Limpeza:</strong> Use pano macio e seco. Evite produtos químicos</li>
-                <li><strong>Exposição:</strong> Evite luz solar direta prolongada para preservar as cores</li>
-                <li><strong>Armazenamento:</strong> Local seco, temperatura ambiente (15–25°C)</li>
-                <li><strong>Manuseio:</strong> Segure sempre pela base para evitar danos às serpentes</li>
-            </ul>
+                    <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+                        <div class="accordion-body">
+                            <ul class="especificacoes_verde">
+                                <li><strong>Material:</strong> PLA+ premium (biodegradável e livre de toxinas)</li>
+                                <li><strong>Dimensões:</strong> 16cm (altura) x 10cm (largura) x 8cm (profundidade)</li>
+                                <li><strong>Peso:</strong> 220g (com base inclusa)</li>
+                                <li><strong>Acabamento:</strong> Pintura artesanal com 6 camadas + verniz protetor
+                                    acetinado</li>
+                                <li><strong>Base:</strong> Inclusa – circular em estilo mármore com inscrição “Medusa”
+                                    em baixo relevo
+                                </li>
+                                <li><strong>Resolução de impressão:</strong> 0.1mm (ultra detalhada)</li>
+                                <li><strong>Temperatura de resistência:</strong> Até 60°C</li>
+                                <li><strong>Tempo de produção:</strong> 3-5 dias úteis (cada peça é feita sob encomenda)
+                                </li>
+                                <li><strong>Garantia:</strong> 90 dias contra defeitos de fabricação</li>
+                                <li><strong>Certificação:</strong> Produto artesanal registrado</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-            <h3>Por que escolher Miniverse?</h3>
-            <p class="pq_escolher">
-                ✓ <strong>Qualidade Premium:</strong> Produção artesanal, sem fabricação em massa<br>
-                ✓ <strong>Sustentabilidade:</strong> Feita com PLA biodegradável e processo ecológico<br>
-                ✓ <strong>Arte Nacional:</strong> Cada peça é criada e pintada por artistas brasileiros<br>
-                ✓ <strong>Embalagem Exclusiva:</strong> Caixa personalizada com proteção interna<br>
-                ✓ <strong>Certificado de Autenticidade:</strong> Peça numerada e assinada pelo artista<br>
-                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada e rastreada
-            </p>
+                <!-- Cuidados e Conservação -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#cuidadosCollapse" aria-expanded="false" aria-controls="cuidadosCollapse">
+                            🧹 Cuidados e Conservação
+                        </button>
+                    </h2>
+                    <div id="cuidadosCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+                        <div class="accordion-body">
+                            <ul class="especificacoes_verde">
+                                <li><strong>Limpeza:</strong> Use pano macio e seco. Evite produtos químicos</li>
+                                <li><strong>Exposição:</strong> Evite luz solar direta prolongada para preservar as
+                                    cores</li>
+                                <li><strong>Armazenamento:</strong> Local seco, temperatura ambiente (15–25°C)</li>
+                                <li><strong>Manuseio:</strong> Segure sempre pela base para evitar danos às serpentes
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Por que escolher Miniverse -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#porqueCollapse" aria-expanded="false" aria-controls="porqueCollapse">
+                            ✨ Por que escolher Miniverse?
+                        </button>
+                    </h2>
+                    <div id="porqueCollapse" class="accordion-collapse collapse" data-bs-parent="#accordionJoel">
+                        <div class="accordion-body">
+                            <p class="pq_escolher_verde">
+                                ✓ <strong>Qualidade Premium:</strong> Produção artesanal, sem fabricação em massa<br>
+                                ✓ <strong>Sustentabilidade:</strong> Feita com PLA biodegradável e processo
+                                ecológico<br>
+                                ✓ <strong>Arte Nacional:</strong> Cada peça é criada e pintada por artistas
+                                brasileiros<br>
+                                ✓ <strong>Embalagem Exclusiva:</strong> Caixa personalizada com proteção interna<br>
+                                ✓ <strong>Certificado de Autenticidade:</strong> Peça numerada e assinada pelo
+                                artista<br>
+                                ✓ <strong>Envio Seguro:</strong> Embalagem reforçada e rastreada
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <div class="acompanha">
                 <p>
@@ -221,9 +268,12 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="db">Dragon Ball</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="../dragonBall/goku.html" rel="noopener">Goku</a> </li>
-                        <li class="mb-2"> <a href="../dragonBall/vegeta.html" rel="noopener">Vegeta</a></li>
-                        <li class="mb-2"><a href="../dragonBall/piccolo.html" rel="noopener">Piccolo</a></li>
+                        <li class="mb-2"> <a href="../dragonBall/goku.html" rel="noopener">Goku</a>
+                        </li>
+                        <li class="mb-2"> <a href="../dragonBall/vegeta.html" rel="noopener">Vegeta</a>
+                        </li>
+                        <li class="mb-2"><a href="../dragonBall/piccolo.html" rel="noopener">Piccolo</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-1 mb-2">
@@ -237,7 +287,8 @@
                 <div class="col-6 col-lg-1 mb-2">
                     <h5 class="star">Star Wars</h5><br>
                     <ul class="list-unstyled">
-                        <li class="mb-2"> <a href="../starWars/darthVader.html" rel="noopener">Darth Vader</a> </li>
+                        <li class="mb-2"> <a href="../starWars/darthVader.html" rel="noopener">Darth
+                                Vader</a> </li>
                         <li class="mb-2"> <a href="../starWars/yoda.html" rel="noopener">Yoda</a> </li>
                         <li class="mb-2"> <a href="../starWars/leia.html" rel="noopener">Leia</a> </li>
                     </ul>
